<resources>
    <string name="app_name">workouttracker</string>
    // Login and Register Page
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or Register</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="gym_weights_background">Gym Weights Background</string>
    <string name="register_here">Don\'t have an account? Register Here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="height_inches">Height (inches)</string>
    <string name="create_account">Create Account</string>
    <string name="height">Height</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="account_page">Account Page</string>
    <string name="home">Home</string>
    <string name="workouts">Workouts</string>
    <string name="progress">Progress</string>
    <string name="account">Account</string>
    // Account Page
    <string name="full_name">%1$s %2$s</string>
    <string name="weight_label">Weight: %1$.1f lbs</string>
    <string name="height_label">Height: %1$.0f ft %2$.0f in</string>
    <string name="age_label">Age: %1$d</string>
    // Home Page
    <string name="welcome_back">Welcome back,</string>
    <string name="home_weight_label">%1$.1f lbs</string>
    <string name="home_height_label">%1$.0f ft %2$.0f in</string>
    <string name="home_age_label">%1$d</string>
    <string name="home_bmi_label">%1$.1f</string>

</resources>